--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>30MFF By Shereena</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+<link rel="icon" type="image/png" href="img/logo.png">
 
 <style>
   /* Center the video */
@@ -18,6 +20,28 @@
     max-width: 100%;
     max-height: 100%;
   }
+
+  /* Logo styling */
+  .logo {
+    position: absolute;
+    top: 10px; /* Adjust this value as needed */
+    left: 10px; /* Adjust this value as needed */
+    width: 50px; /* Adjust this value as needed */
+    height: auto;
+  }
+
+  /* Navbar logo styling */
+  .navbar-logo {
+    height: 40px; /* Adjust the size as needed */
+    vertical-align: middle;
+  }
+
+  /* Center logo in the navbar */
+  .w3-bar .w3-center {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 </style>
 
 </head>
@@ -27,6 +51,9 @@
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
     <a href="#home" class="w3-bar-item w3-button">30 MFF - Escape From Reality</a>
+    <div class="w3-center">
+      <img src="img/logo.png" alt="Logo" class="navbar-logo">
+    </div>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">About</a>
@@ -39,6 +66,7 @@
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px;position:relative;" id="home">
     <img src="img/sunset.png" alt="sunset" width="1600" height="800">
+    <img src="img/logo.png" alt="logo" class="logo">
     <div class="w3-display-bottomleft w3-padding-large w3-opacity">
       <h1 class="w3-xxlarge w3-text-white"><b>Escape From Reality</b></h1>
     </div>
