--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<link rel="icon" type="img/logo.png" href="img/logo.png">
+<link rel="icon" type="img/logo.png" href="img/logo.jpg">
 
 <style>
   /* Center the video */
