--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-<link rel="icon" type="img/logo.png" href="img/logo.jpg">
+<link rel="icon" type="image/png" href="img/logo.jpg">
 
 <style>
   /* Center the video */
@@ -41,6 +40,19 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+  }
+  html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
+  .mySlides {display:none}
+  .w3-tag, .fa {cursor:pointer}
+  .w3-tag {height:15px;width:15px;padding:0;margin-top:6px}
+
+  /* Slideshow image styling */
+  .slideshow-img {
+    height: 300px; /* Set a consistent height */
+    width: auto; /* Maintain aspect ratio */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 </style>
 
@@ -93,6 +105,41 @@
     </div>
   </div>
   
+  <!-- Slideshow Section -->
+  <div class="w3-container" id="photos">
+    <h1 class="w3-center">Photos</h1><br>
+    <div class="w3-display-container mySlides">
+      <img src="img/photo1.jpeg" class="slideshow-img">
+      <div class="w3-display-topleft w3-container w3-padding-32">
+        <span class="w3-white w3-padding-large w3-animate-bottom"></span>
+      </div>
+    </div>
+    <div class="w3-display-container mySlides">
+      <img src="img/photo2.jpeg" class="slideshow-img">
+      <div class="w3-display-middle w3-container w3-padding-32">
+        <span class="w3-white w3-padding-large w3-animate-bottom"></span>
+      </div>
+    </div>
+    <div class="w3-display-container mySlides">
+      <img src="img/photo3.jpeg" class="slideshow-img">
+      <div class="w3-display-topright w3-container w3-padding-32">
+        <span class="w3-white w3-padding-large w3-animate-bottom"> </span>
+      </div>
+    </div>
+
+    <!-- Slideshow next/previous buttons -->
+    <div class="w3-container w3-dark-grey w3-padding w3-xlarge">
+      <div class="w3-left" onclick="plusDivs(-1)"><i class="fa fa-arrow-circle-left w3-hover-text-teal"></i></div>
+      <div class="w3-right" onclick="plusDivs(1)"><i class="fa fa-arrow-circle-right w3-hover-text-teal"></i></div>
+    
+      <div class="w3-center">
+        <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+        <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+        <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+      </div>
+    </div>
+  </div>
+
   <hr>
 
   <!-- Contact Section -->
@@ -108,9 +155,58 @@
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Your Email" required name="Email"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
       <p><textarea class="w3-input w3-padding-16" placeholder="Message" required name="Message"></textarea></p>
-      <p><button class="w3-button w3-black w3-padding-large" type="submit">SEND MESSAGE</button></p>
+      <p><button class="w3-button w3-light-grey w3-padding-large" type="submit">SEND MESSAGE</button></p>
     </form>
   </div>
+
+<!-- End page content -->
+</div>
+
+<!-- Google Map -->
+<div id="googleMap" style="width:100%;height:400px;"></div>
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+<script>
+function myMap() {
+  var mapProp= {
+    center:new google.maps.LatLng(51.508742,-0.120850),
+    zoom:5,
+  };
+  var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+</script>
+
+<script>
+// Slideshow
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function currentDiv(n) {
+  showDivs(slideIndex = n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("demodots");
+  if (n > x.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" w3-white", "");
+  }
+  x[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " w3-white";
+}
+</script>
+
+</body>
+</html>
 
 </div>
 
