--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <h1 class="w3-xxlarge w3-text-white"><b>Escape From Reality</b></h1>
     </div>
     <div class="video-container">
-      <iframe width="650" height="350" src="https://youtu.be/Ihlzn0eYp-I?si=JYLYDH-9ZdjwF-yE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="650" height="350" src="https://youtu.be/Ihlzn0eYp-I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </header>
 
